# qazcode-nu

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
data/examples/: response.json
data/protocols/: p_0092f99670_399_17022026.json  p_00f19c934c_718_17022026.json  p_03063596dd_250_17022026.json  p_056d1490b1_313_17022026.json  p_068a0e95c2_1091_17022026.json  p_087071a5a7_1128_17022026.json  p_112bd4a8ea_259_17022026.json  p_1174380b45_6_17022026.json  p_128eb59e62_962_17022026.json  p_13c0c406ae_534_17022026.json  p_174605ece8_655_17022026.json  p_18401ff12c_139_17022026.json  p_186d4cae40_258_17022026.json  p_187fd854dc_248_17022026.json  p_1d651bfe6f_894_17022026.json  p_1d859b3003_445_17022026.json  p_1e99277b81_926_17022026.json  p_1ea3af5060_567_17022026.json  p_1ef93b67f5_333_17022026.json  p_1f128ab845_896_17022026.json  p_20bdf50f3f_505_17022026.json  p_223d2f55dd_994_17022026.json  p_24152a2ad2_213_17022026.json  p_247d698854_588_17022026.json  p_2498a90f8c_164_17022026.json  p_266f021059_465_17022026.json  p_29784afede_355_17022026.json  p_2991c544ff_573_17022026.json  p_2adbafcce4_264_17022026.json  p_2b8b036ba2_690_17022026.json  (+186 more)
frontend/: README.md
notebooks/: llm_api_examples.ipynb
rag/: evaluate_retriever.py  ingest.py  pyproject.toml  retriever_evaluation_results.json
rag/test_set/: p_005c999df9_957_17022026.json  p_0091ab7702_72_17022026.json  p_018d0b3c52_996_17022026.json  p_01f3a22e9f_186_17022026.json  p_029838d829_525_17022026.json
src/: llm_server.py  mock_server.py  retriever.py
(+7 files in other folders)
