[project]
name = "rag-ingestion"
version = "0.1.0"
description = "RAG ingestion script"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2.1",
    "langchain-community>=0.2.1",
    "langchain-qdrant>=0.1.1",
    "langchain-huggingface>=0.0.3",
    "qdrant-client>=1.9.1",
    "pypdf>=4.2.0",
    "sentence-transformers>=2.7.0",
    "ipykernel>=7.2.0",
    "tqdm>=4.66.4",
    "rich>=13.0.0",
    "langgraph>=1.0.9",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
]
